--- a/lessons/lesson14/1/_contact_us.scss
+++ b/lessons/lesson14/1/_contact_us.scss
@@ -19,45 +19,36 @@ text-align: center;
 padding: 60px;
 }
 .about_text_1{
-    // width: 543px;
-    height: 66px;
-font-family:Lato;
-display: block;
-padding-bottom: 30px;
-margin-bottom: 20px;
-font-size: 16px;
-text-align: center;
-margin: 0 auto;
-font-weight: 300;
-line-height: 25.89px;
+    font-family:Lato;
+    display: block;
+    max-width: 533px;
+    padding-bottom: 30px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    text-align: center;
+    margin: 0 auto;
+    font-weight: 300;
+    line-height: 25.89px;
 }
 .centr{
     margin: 0 auto;
-    width: 899px;
-    height: 500px;
+    max-width: 800px;
     margin-top: 140px;
 }
 .contact_us{
-    width: 395px;
-    margin-left: 230px;
-margin-bottom: 40px;
-    height: 58px;
-    margin: 0 auto;
+    padding: 20px 60px;
+    display: block;
+    margin: 0 auto 40px auto;
     border: 2px solid #3c3c3c;
     background-color: #3c3c3c;
-    .button_text{
-        color: #ffffff;
-font-family: Lato;
-font-size: 16px;
-font-weight: 400;
-text-transform: uppercase;
-letter-spacing: 2.54px;
+    color: #ffffff;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 2.54px;
     }
-}
-.button1{
-    margin-left: 230px;
-    margin-bottom: 30px;
-}
+
 .footer{
     display: flex;
     justify-content: center;
@@ -73,4 +64,23 @@ font-weight: 400;
     margin-bottom: 20px;
     padding: 0 20px;
 }
+}
+
+@media (max-width: 825px){
+    .container_6 .centr{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+@media (max-width: 611px){
+    .about_text_1{
+        font-size: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+@media (max-width: 536px){
+    .info_6{
+        padding: 30px;
+    }
 }
