--- a/lessons/lesson14/1/_what_we_do.scss
+++ b/lessons/lesson14/1/_what_we_do.scss
@@ -1,57 +1,50 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+
 .container_4{
-    height: 1410px;
     width: 100%;
     .about_us_1{
         border: none;
-        width: 902px;
-    height: 1480px;
-    margin: 0 auto;
-    margin-top: 200px;
+        max-width: 800px;
+        margin: 0 auto;
+        margin-top: 200px;
     }
     .info_3{
         text-align: center;
         color: #3c3c3c;
-    font-family: Lato;
-    font-size: 34px;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding:  65px 100px;
-    letter-spacing: 8.95px;
+        font-family: Lato;
+        font-size: 34px;
+        font-weight: 700;
+        text-transform: uppercase;
+        padding:  65px 100px;
+        letter-spacing: 8.95px;
     }
     .heading_4{
         color: #3c3c3c;
-    font-family: Lato;
-    font-size: 20px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 5.26px;
-    text-align: center;
-    margin-bottom: 20px;
+        font-family: Lato;
+        font-size: 20px;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 5.26px;
+        text-align: center;
+        margin-bottom: 20px;
     }
 
     .what_text{
         color: #3c3c3c;
-    font-family: Lato;
-    font-size: 14px;
-    font-weight: 300;
-    width: 549px;
-    height: 89px;
-    margin: 0 auto;
-    text-align: center;
-    line-height: 25.89px;
+        font-family: Lato;
+        font-size: 14px;
+        font-weight: 300;
+        max-width: 549px;   
+        margin: 0 auto;
+        text-align: center;
+        line-height: 25.89px;
     .what_text:last-child{
         margin-bottom: 40px;
     }
     }
     .photos{
-    margin-top: 110px;
-    display: inline-block;
-    margin-left: 45%;
-    margin-bottom: 20px;
+   
+    display: block;
+    margin: 110px auto 20px auto;
 }
   }
 
@@ -61,7 +54,7 @@
 font-family: Lato;
 font-size: 14px;
 font-weight: 300;
-width: 549px;
+max-width: 549px;
 height: 89px;
 margin: 0 auto;
 text-align: center;
@@ -71,3 +64,23 @@ line-height: 25.89px;
 }
 }
 
+
+@media(max-width: 825px){
+    .container_4 .about_us_1{
+        margin-left: 15px;
+        margin-right: 15px;  
+    }
+    .container_4 .info_3 {
+        padding: 65px 46px;
+    }
+}
+@media(max-width: 611px){
+    .container_4 .what_text{
+        font-size: 20px;
+        margin: 0 15px 100px 15px;
+    }
+    
+}
+@media(max-width: 471px){
+
+}
