--- a/bachelors/client/src/app/register-page/register-page.component.html
+++ b/bachelors/client/src/app/register-page/register-page.component.html
@@ -1,16 +1,16 @@
 <div class="card">
   <div class="card-content">
-    <span class="card-title">Sign In into system</span>
+    <span class="card-title">Create account</span>
     <div class="input-field">
       <input id="email" type="email" required>
       <label for="email">Email:</label>
     </div>
     <div class="input-field">
       <input id="password" type="password" required>
-      <label for="password">Passport:</label>
+      <label for="password">Password:</label>
     </div>
   </div>
   <div class="card-action">
-    <button class="modal-action btn waves-effect">Sign in</button>
+    <button class="modal-action btn waves-effect">Create</button>
   </div>
 </div>
