Categories + positions done

--- a/bachelorapp/client/src/app/categories-page/categories-form/categories-form.component.html
+++ b/bachelorapp/client/src/app/categories-page/categories-form/categories-form.component.html
@@ -77,8 +77,8 @@
 
 </div>
 
-<!-- <app-position-form
+<app-position-form
   *ngIf="category?._id"
   [categoryId]="category._id"
 >
-</app-position-form> -->
+</app-position-form>
